file name changed

--- a/IBDPBasic.ipynb
+++ b/IBDPBasic.ipynb
@@ -1,60 +1,148 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "\n",
+       ".rise-enabled .reveal pre {\n",
+       "     font-size: 150%;\n",
+       "    line-height: 150%\n",
+       "}\n",
+       "\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%HTML\n",
+    "<style>\n",
+    "\n",
+    ".rise-enabled .reveal pre {\n",
+    "     font-size: 150%;\n",
+    "    line-height: 150%\n",
+    "}\n",
+    "\n",
+    "</style>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Setting up"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "We are going to use numpy, pandas, seaborn and matplotlib libraries. We will make inline plots."
+    "Google Anaconda and download 3.7 version. \n",
+    "Install it.\n",
+    "\n",
+    "<center><img src=\"image/python3-7.png\"></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Importing libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline  "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Importing data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "Download a data set from https://raw.githubusercontent.com/mGalarnyk/Python_Tutorials/master/Kaggle/BreastCancerWisconsin/data/data.csv"
+    "Download a data set from http://bit.ly/2M1yrW7.\n",
+    "Create a folder called Data.\n",
+    "<center><img src=\"image/data.png\"></center>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# read a csv\n",
-    "df = pd.read_csv('Data/cancerdata.csv')"
+    "df = pd.read_csv('http://bit.ly/2M1yrW7')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -62,7 +150,7 @@
        "(569, 33)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,8 +162,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -129,7 +221,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -498,7 +594,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -721,7 +821,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Statistical overview"
    ]
@@ -729,7 +833,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1161,6 +1269,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                              8670\n",
+       "diagnosis                          B\n",
+       "radius_mean                    6.981\n",
+       "texture_mean                    9.71\n",
+       "perimeter_mean                 43.79\n",
+       "area_mean                      143.5\n",
+       "smoothness_mean              0.05263\n",
+       "compactness_mean             0.01938\n",
+       "concavity_mean                     0\n",
+       "concave points_mean                0\n",
+       "symmetry_mean                  0.106\n",
+       "fractal_dimension_mean       0.04996\n",
+       "radius_se                     0.1115\n",
+       "texture_se                    0.3602\n",
+       "perimeter_se                   0.757\n",
+       "area_se                        6.802\n",
+       "smoothness_se               0.001713\n",
+       "compactness_se              0.002252\n",
+       "concavity_se                       0\n",
+       "concave points_se                  0\n",
+       "symmetry_se                 0.007882\n",
+       "fractal_dimension_se       0.0008948\n",
+       "radius_worst                    7.93\n",
+       "texture_worst                  12.02\n",
+       "perimeter_worst                50.41\n",
+       "area_worst                     185.2\n",
+       "smoothness_worst             0.07117\n",
+       "compactness_worst            0.02729\n",
+       "concavity_worst                    0\n",
+       "concave points_worst               0\n",
+       "symmetry_worst                0.1565\n",
+       "fractal_dimension_worst      0.05504\n",
+       "Unnamed: 32                     None\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -1534,6 +1695,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
