--- a/A-Measure-of-Linear-Relationship.ipynb
+++ b/A-Measure-of-Linear-Relationship.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pearson's product-moment correlation for IB Diploma Mathematics"
+    "# A Measure of Linear Relationship\n",
+    "\n",
+    "## Pearson's product-moment correlation for IB Diploma Mathematics"
    ]
   },
   {
