--- a/Binomial-distribution.ipynb
+++ b/Binomial-distribution.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Binomial distribution\n",
+    "\n",
+    "\n",
     "https://towardsdatascience.com/fun-with-the-binomial-distribution-96a5ecabf65b"
    ]
   },
