--- a/Chi-square-test-for-independence-for-IB-Diploma-Mathematics.ipynb
+++ b/Chi-square-test-for-independence-for-IB-Diploma-Mathematics.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chi-square test for independence for IB Diploma Mathematics"
+    "# The expected asked “Hey the observed! How different are you from us?”\n",
+    "\n",
+    "## Chi-square test for independence for IB Diploma Mathematics"
    ]
   },
   {
