--- a/Python-for-IB-Diploma-Mathematics-Toolkits.ipynb
+++ b/Python-for-IB-Diploma-Mathematics-Toolkits.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "SL 4.11 \n",
     "Chi square goodness of fit test.  \n",
-    "Chi-square Independence Test and The t-test.\n",
+    "[Chi-square Independence Test and The t-test](http://bit.ly/2EaqgST).\n",
     "\n",
     "HL 4.12 Reliability tests. Validity tests.\n",
     "\n",
