--- a/A-Measure-of-Linear-Relationship.ipynb
+++ b/A-Measure-of-Linear-Relationship.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "I downloaded the data from this [link](https://stats.oecd.org/Index.aspx?DataSetCode=HOUSE_PRICES).\n",
     "\n",
-    "And you can see all the codes [here](http://bit.ly/2PAiTcx)."
+    "And you can see all the codes [here](http://bit.ly/2Pdv6Fj)."
    ]
   },
   {
