--- a/Spearmans-rank-correlation-coefficient-for-IB-Diploma-Mathematics.ipynb
+++ b/Spearmans-rank-correlation-coefficient-for-IB-Diploma-Mathematics.ipynb
@@ -8,6 +8,11 @@
     }
    },
    "source": [
+    "# Discover the strength of monotonic relation\n",
+    "\n",
+    "## Finding Spearman’s rank correlation coefficient using Python for IB Diploma Mathematics\n",
+    "\n",
+    "\n",
     "In this article, I will show the necessary steps using Python to find Spearman's rank correlation coefficient.\n",
     "\n",
     "Spearman's rank correlation uses ordinal data. Examples of ordinal data are:\n",
@@ -25,7 +30,7 @@
     "\n",
     "A value of 1 means the set of data is strictly increasing and the value of -1 means it is strictly decreasing. A value of 0 means that data shows no monotonic behavior. the Spearman correlation between two variables will be high when an observation has a similar rank between the two variables.\n",
     "\n",
-    "You can find all the code from this [link](https://github.com/shinokada/python-for-ib-diploma-mathematics/blob/master/Spearman's%20rank%20correlation%20coefficient.ipynb).\n",
+    "You can find all the code from this [link](http://bit.ly/2YHF5G8).\n",
     "\n",
     "Let's start.\n",
     "\n",
