--- a/Chi-square-test-for-independence-for-IB-Diploma-Mathematics.ipynb
+++ b/Chi-square-test-for-independence-for-IB-Diploma-Mathematics.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When you have a large amount of data you can use Python instead of a calculator to find Chi-square. It is useful for internal assessment and also extended essay. In this article, I will show you how to do it. You can find the all the codes [here](https://medium.com/r/?url=https%3A%2F%2Fgithub.com%2Fshinokada%2Fpython-for-ib-diploma-mathematics%2Fblob%2Fmaster%2FChi-square.ipynb).\n",
+    "When you have a large amount of data you can use Python instead of a calculator to find Chi-square. It is useful for internal assessment and also extended essay. In this article, I will show you how to do it. You can find the all the codes [here](http://bit.ly/2EaqgST).\n",
     "\n",
     "The easiest way to use Python is Jupyter Notebook. Anaconda is a free and open-source distribution of the Python programming languages for scientific computing. Jupyter Notebook is included in Anaconda. You can install Anaconda in this [link](https://www.anaconda.com/distribution/).\n",
     "\n",
