--- a/The Chi-square-Goodness-of-Fit-Test-and-The-Pooled-two-sample-t-test .ipynb
+++ b/The Chi-square-Goodness-of-Fit-Test-and-The-Pooled-two-sample-t-test .ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Chi-square Goodness of Fit Test "
+    "# Does the observed fit the expected?\n",
+    "## Using Python to test the Chi-square Goodness of Fit and the Pooled Two-Sample t-test for IB DP Mathematics"
    ]
   },
   {
@@ -13,7 +14,7 @@
    "source": [
     "The Chi-square Goodness of fit tests whether the observed distribution of a variable fits a given distribution. When the calculated p-value is less than the significance level, reject the null hypothesis. This is different from [Chi-square test for independence](https://medium.com/@shinichiokada/chi-square-test-for-independence-for-ib-diploma-mathematics-e197aafbd771?source=friends_link&sk=0dc57f1115d88885affa7a04aadfded9) where we test whether two variables are independent.\n",
     "\n",
-    "You can find all codes in this [link](https://github.com/shinokada/python-for-ib-diploma-mathematics/blob/master/The%20Chi-square%20Goodness%20of%20Fit%20Test%20and%20The%20Pooled%20two-sample%20t-test%20.ipynb).\n",
+    "You can find all codes in this [link](http://bit.ly/2YI6wzf).\n",
     "\n",
     "$H_0$ Null hypothesis: In Chi-Square goodness of fit test, the null hypothesis assumes that there is no significant difference between the observed and the expected value.\n",
     "\n",
