--- a/Python-for-IB-Diploma-Mathematics-Toolkits.ipynb
+++ b/Python-for-IB-Diploma-Mathematics-Toolkits.ipynb
@@ -32,11 +32,11 @@
     "\n",
     "SL 4.9 Normal distribution\n",
     "\n",
-    "SL 4.10 Spearman's rank correlation.\n",
+    "- SL 4.10 [Spearman's rank correlation](http://bit.ly/2YHF5G8)\n",
     "\n",
-    "SL 4.11 \n",
-    "Chi square goodness of fit test.  \n",
-    "[Chi-square Independence Test and The t-test](http://bit.ly/2EaqgST).\n",
+    "- SL 4.11 \n",
+    "  - Chi square goodness of fit test.  \n",
+    "  - [Chi-square Independence Test and The t-test](http://bit.ly/2EaqgST).\n",
     "\n",
     "HL 4.12 Reliability tests. Validity tests.\n",
     "\n",
