--- a/Python-for-IB-Diploma-Mathematics-Toolkits.ipynb
+++ b/Python-for-IB-Diploma-Mathematics-Toolkits.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "SL 4.3 Measures of central tendency, mean, median, mode. Modal class for equal data intervals. Measures of dispersion including interquartile range, standard and variance.\n",
     "\n",
-    "SL 4.4 Linear correlation of bivariate data. Scatter diagrams including lines of best fit. Equation of the regression line.\n",
+    "- SL 4.4 [Linear correlation of bivariate data. Scatter diagrams including lines of best fit. Equation of the regression line[(http://bit.ly/2Pdv6Fj)\n",
     "\n",
     "SL 4.5 Probability\n",
     "\n",
@@ -35,7 +35,7 @@
     "- SL 4.10 [Spearman's rank correlation](http://bit.ly/2YHF5G8)\n",
     "\n",
     "- SL 4.11 \n",
-    "  - Chi square goodness of fit test.  \n",
+    "  - [Chi square goodness of fit test](http://bit.ly/349FsKF)\n",
     "  - [Chi-square Independence Test and The t-test](http://bit.ly/2EaqgST).\n",
     "\n",
     "HL 4.12 Reliability tests. Validity tests.\n",
