--- a/How-many-times-an-event-is-likely-to-occur-within-a-specified-period-of-time..ipynb
+++ b/How-many-times-an-event-is-likely-to-occur-within-a-specified-period-of-time..ipynb
@@ -1,18 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Poisson Distribution for IB Diploma Mathematics"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Table of contents\n",
+    "\n",
+    "## Indtroduction\n",
+    "## "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -22,6 +25,17 @@
     }
    },
    "source": [
+    "The Poisson Distribution can be use to find the probability of how many times an event is likely to occur within a specified variable.\n",
+    "\n",
+    "Applicationns are:\n",
+    "- the number of customers to a shop \n",
+    "- the number of car accident \n",
+    "- the number of typo in a book, etc.\n",
+    "\n",
+    "The binomial distribution is applied to situations that have a finite number of possible outcomes, whereas the Poisson distibution is applied when you want to consider situations that have an infinite number of possible outcomes.\n",
+    "\n",
+    "We use the Poisson distribution when an event of the variable is equally likely to occur in any interval and the events must be independent of each other. \n",
+    "\n",
     "The formula to calculate probabilites for Poisson distribution variable is: "
    ]
   },
@@ -37,8 +51,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You must know the mean occurrence of that occurs in the given interval.\n",
+    "\n",
+    "\n",
+    "\"within a specified variable\" can be time, length, volume or other things. For example, the number of car accident is time-dependent. The number of bacteria is volume dependent. The number of scratches in a alminium sheet is area or length dependent.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -61,15 +86,10 @@
     "import seaborn as sns\n",
     "%matplotlib inline\n",
     "\n",
-    "#sample = poisson.rvs(mu=2.2, size=10000, random_state=13)\n",
-    "#sample = poisson.pmf(mu=2.2, size=10000, random_state=13)\n",
-    "#sns.distplot(sample, kde=False)\n",
-    "#x= np.arange(100,200,0.5)\n",
-    "#plt.plot(x, poisson.pmf(x,150))\n",
     "arr = []\n",
     "rv = poisson(5)\n",
     "for num in range(0,20):\n",
-    " arr.append(rv.pmf(num))\n",
+    "    arr.append(rv.pmf(num))\n",
     "\n",
     "plt.plot(arr, linewidth=1.0)\n",
     "plt.show()"
@@ -399,6 +419,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.5"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   }
  },
  "nbformat": 4,
