--- a/Measures-of-central-tendency.ipynb
+++ b/Measures-of-central-tendency.ipynb
@@ -4,25 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Binomial distribution\n",
+    "# Introduction\n",
     "\n",
+    "## Table of contents\n",
     "\n",
-    "https://towardsdatascience.com/fun-with-the-binomial-distribution-96a5ecabf65b"
+    "- Mean, median, mode\n",
+    "- Modal class for equal data intervals \n",
+    "- Measures of dispersion including interquartile range, standard deviation and variance\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The binomial distributions can be very helpful when modelling an event that has only two possible results and is repeated a number of times. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
