--- a/Python-for-IB-Diploma-Mathematics-Toolkits.ipynb
+++ b/Python-for-IB-Diploma-Mathematics-Toolkits.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introduction\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# Tools\n",
     "\n",
@@ -14,13 +18,14 @@
     "\n",
     "# Topics\n",
     "\n",
+    "\n",
     "- SL 4.1 Outliers\n",
     "\n",
     "- SL 4.2 Descriptive statistics including frequency distribution, histograms, cumulative frequency, median, interquartile range, percentiles, range, box and whisker diagram.\n",
     "\n",
     "SL 4.3 Measures of central tendency, mean, median, mode. Modal class for equal data intervals. Measures of dispersion including interquartile range, standard and variance.\n",
     "\n",
-    "- SL 4.4 [Linear correlation of bivariate data. Scatter diagrams including lines of best fit. Equation of the regression line[(http://bit.ly/2Pdv6Fj)\n",
+    "- SL 4.4 [Linear correlation of bivariate data. Scatter diagrams including lines of best fit. Equation of the regression line](http://bit.ly/2Pdv6Fj)\n",
     "\n",
     "SL 4.5 Probability\n",
     "\n",
@@ -83,6 +88,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.5"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   }
  },
  "nbformat": 4,
