Update Jupyter Notebook classroom

--- a/Getting-Started-with-Jupyter-Notebook-Classroom.ipynb
+++ b/Getting-Started-with-Jupyter-Notebook-Classroom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -15,8 +15,8 @@
        "<style>\n",
        "\n",
        ".rise-enabled .reveal pre {\n",
-       "     font-size: 150%;\n",
-       "    line-height: 150%\n",
+       "     font-size: 200%;\n",
+       "    line-height: 210%\n",
        "}\n",
        "\n",
        "</style>\n"
@@ -34,8 +34,8 @@
     "<style>\n",
     "\n",
     ".rise-enabled .reveal pre {\n",
-    "     font-size: 150%;\n",
-    "    line-height: 150%\n",
+    "     font-size: 200%;\n",
+    "    line-height: 210%\n",
     "}\n",
     "\n",
     "</style>\n"
@@ -104,8 +104,10 @@
     }
    },
    "source": [
+    "\n",
     "# Create a folder \n",
-    "## New > Folder"
+    "## New > Folder\n",
+    "<center><img src=\"image/folder.png\"></center>"
    ]
   },
   {
@@ -116,7 +118,9 @@
     }
    },
    "source": [
-    "# Rename the folder to Statistics"
+    "# Rename the folder to Statistics\n",
+    "<center><img src=\"image/rename.png\"></center>\n",
+    "<center><img src=\"image/rename2.png\"></center>"
    ]
   },
   {
@@ -132,7 +136,7 @@
     "## Click the Data folder\n",
     "\n",
     "<br>\n",
-    "<center><img src=\"image/data.png\"></center>\n"
+    "\n"
    ]
   },
   {
@@ -145,11 +149,10 @@
    "source": [
     "# In the Data folder, create a file called mydata1.csv\n",
     "\n",
-    "# Open http://bit.ly/2M1yrW7\n",
+    "<center><img src=\"image/csvfile.png\"></center>\n",
     "\n",
-    "# Command + A to select all and Command + C to copy\n",
-    "\n",
-    "# Paste it to the mydata1.csv and Command + S to save\n"
+    "<center><img src=\"image/csvfile2.png\"></center>\n",
+    "\n"
    ]
   },
   {
@@ -160,7 +163,24 @@
     }
    },
    "source": [
-    "# In the Statistics folder, create a file called Test by New > Python 3"
+    "# Open http://bit.ly/2M1yrW7\n",
+    "\n",
+    "# Command + A to select all and Command + C to copy\n",
+    "\n",
+    "# Command + V to paste it to the mydata1.csv and Command + S to save"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# In the Statistics folder, create a file called Test by New > Python 3\n",
+    "\n",
+    "<center><img src=\"image/statsfolder.png\"></center>"
    ]
   },
   {
@@ -835,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1148,7 +1168,7 @@
        "[8 rows x 32 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1284,7 +1304,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1295,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1341,7 +1361,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,8 +1371,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# We are goin to explore 'radius_mean'."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1364,8 +1395,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Max, min and range"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1378,7 +1420,7 @@
        "28.11"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1390,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1403,7 +1445,7 @@
        "6.981"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1415,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1428,7 +1470,7 @@
        "21.128999999999998"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,7 +1487,94 @@
     }
    },
    "source": [
-    "# mean, median and mode"
+    "# Mean, median and mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.127291739894552"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean = df[target].mean()\n",
+    "mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.37"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "median = df[target].median()\n",
+    "median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    12.34\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mode = df[target].mode()\n",
+    "mode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Lower quartile, upper quartile, interquartile range"
    ]
   },
   {
@@ -1460,7 +1589,7 @@
     {
      "data": {
       "text/plain": [
-       "14.127291739894552"
+       "11.7"
       ]
      },
      "execution_count": 19,
@@ -1469,8 +1598,8 @@
     }
    ],
    "source": [
-    "mean = df[target].mean()\n",
-    "mean"
+    "q1 = df[target].quantile(0.25)\n",
+    "q1"
    ]
   },
   {
@@ -1485,7 +1614,7 @@
     {
      "data": {
       "text/plain": [
-       "13.37"
+       "15.78"
       ]
      },
      "execution_count": 20,
@@ -1494,8 +1623,8 @@
     }
    ],
    "source": [
-    "median = df[target].median()\n",
-    "median"
+    "q3 = df[target].quantile(0.75)\n",
+    "q3"
    ]
   },
   {
@@ -1510,85 +1639,10 @@
     {
      "data": {
       "text/plain": [
-       "0    12.34\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mode = df[target].mode()\n",
-    "mode"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# lower quartile, upper quartile, interquartile range"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11.7"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q1 = df[target].quantile(0.25)\n",
-    "q1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15.78"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q3 = df[target].quantile(0.75)\n",
-    "q3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "4.08"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1600,14 +1654,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# The default is 0.5 which is the same as median or 50%-tile"
+    "# The default is 0.5 for quantile which is the same as median or 50%-tile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1620,19 +1678,29 @@
        "13.37"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "df[target].quantile()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Standard deviation and variance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1640,19 +1708,42 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The standard deviation is 3.52 and the variance is 12.42\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3.5240488262120775"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# standard deviation\n",
-    "std = df[target].std()\n",
-    "# variance\n",
-    "var = df[target].var()\n",
-    "print('The standard deviation is %.2f and the variance is %.2f' % (std, var))"
+    "df[target].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.418920129526722"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[target].var()"
    ]
   },
   {
@@ -1668,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1678,10 +1769,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x119016dd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11e5e9c10>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1699,13 +1790,23 @@
     }
    ],
    "source": [
-    "# default of plot() \n",
     "df[target].plot()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Histgram with the default, 10 columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1715,10 +1816,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11b131b50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x120c5d8d0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1736,13 +1837,23 @@
     }
    ],
    "source": [
-    "# histgram with the default, 10 columns\n",
     "df[target].plot.hist()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Histgram with 100 columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1752,10 +1863,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x116c72d90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x114aa0950>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1773,38 +1884,23 @@
     }
    ],
    "source": [
-    "# histgram with 100 columns\n",
     "df[target].plot.hist(bins=100)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9423795716730992"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# skewness \n",
-    "df[target].skew(axis=0,skipna=True)"
+    "# Box and wisker plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1814,10 +1910,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x118fcab10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11e99aed0>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1846,13 +1942,6 @@
     "\n",
     "- https://cloudxlab.com/blog/numpy-pandas-introduction/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
